@@ -21,3 +21,4 @@ suggestions:
   Bruno Vernay
   Ben Boeckel
   Wade Duvall
+  Sebastian Uharek
